methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
	avance()
  if(getCouleurSol()==Colo.green){
    return true
  }else{
    return false
  }

  
  

}